compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/object.kt
object C {
    <!CONFLICTING_PLATFORM_DECLARATIONS!>val x<!> = 1
    <!CONFLICTING_PLATFORM_DECLARATIONS!>fun getX()<!> = 1
}